css/partials/_theme.scss
html{
	height: 100%;
}
body{
	font-family: $textFont;
	color: $slate;
	font-size: $normaltext;
	overflow-x: hidden;
	text-rendering: optimizelegibility;
	 -moz-font-feature-settings: "kern" 1;
	 -moz-font-feature-settings: "kern=1";
	 -ms-font-feature-settings: "kern" 1;
	 -o-font-feature-settings: "kern" 1;
	 -webkit-font-feature-settings: "kern" 1;
	 font-feature-settings: "kern" 1; 
	 height: 100%; 
}

h1{
	font-size: 3em;
	font-family: $headlineFont;
	text-align: center;
	line-height: 1.6em;
	letter-spacing: 2px;
}
h2 {
	@extend h1;
	font-size: 2.4em;
}
h3{
	@extend h1;
	font-size: 2em;
}

#hero{
	background-color: $blush;
	min-height: 800px;
	h1{
		margin-top: 5em;
		color: white;
	}
	P{
		color: lighten($slate, 60%);
		letter-spacing: 1px;
	}
}

#travel-category{
	@media (min-width: 640px){
		padding: 3em 4em;
	}
	@media (max-width: 640px){
		padding: 2em 2em;
	}
}

figure {
	position: relative;
	float: left;
	overflow: hidden;
	img {
	position: relative;
	display: block;
	min-height: 100%;
	max-width: 100%;
	}
	figcaption {
		position: absolute;
		top: 0%;
		left: 0%;
		width: 100%;
		height: 100%;
		padding: 2em;
		color: #fff;
		// text-transform: uppercase;
		font-size: 1em;
		// opacity: 0;
	}
		figcaption > a {
		z-index: 1000;
		text-indent: 200%;
		white-space: nowrap;
		font-size: 0;
		opacity: 0;
	}
	&.effect-zoom-color{
		background: -webkit-linear-gradient(180deg, #dc686f 0%,#f16e48 100%);
	    background: linear-gradient(180deg, #dc686f 0%,#f16e48 100%);
	    img{
			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
			transition: opacity 0.35s, transform 0.35s;

	    }
	    p{
			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
			transition: opacity 0.35s, transform 0.35s;
			margin-top: 30%;
			padding: 1.5em;
			letter-spacing: 1px;
			text-align: left;
			text-transform: none;
			font-size: 1.1em;
			opacity: 0;
			-webkit-transform: scale3d(0.8,0.8,1);
			transform: scale3d(0.8,0.8,1);
			-webkit-transform-origin: 50% -100%;
			transform-origin: 50% -100%;
		
	    }
	    h2{
			opacity: 0;
			// margin: 10% 0 10px 0;
			padding: 0;
			text-align: left;
			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
			transition: opacity 0.35s, transform 0.35s;
			-webkit-transform: scale3d(0.8,0.8,1);
			transform: scale3d(0.8,0.8,1);
			-webkit-transform-origin: 50% 100%;
			transform-origin: 50% 100%;
	    }
	    &:hover img{
			opacity: 0.1;
			-webkit-transform: scale3d(0.9,0.9,1);
			transform: scale3d(0.9,0.9,1);
	    }
	    &:hover p, &:hover h2{
			opacity: 1;
			-webkit-transform: scale3d(1,1,1);
			transform: scale3d(1,1,1);
	    }
	}
	//Zoom image with text and paragraph with border effect.

	&.effect-zoom-color-border{
		background: -webkit-linear-gradient(180deg, #dc686f 0%,#f16e48 100%);
		background: linear-gradient(180deg, #dc686f 0%,#f16e48 100%);
		img{
			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
			transition: opacity 0.35s, transform 0.35s;
		}
		p{
			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
			transition: opacity 0.35s, transform 0.35s;
			position: absolute;
			text-align: center;
			bottom: 0;
			left: 0;
			margin: 20px;
			padding: 30px;
			border: 2px solid #fff;
			text-transform: none;
			font-size: 1em;
			letter-spacing: 1px;
			opacity: 0;
			-webkit-transform: scale3d(0.8,0.8,1);
			transform: scale3d(0.8,0.8,1);
			-webkit-transform-origin: 50% -100%;
			transform-origin: 50% -100%;
		}
		h2{
			padding: 0;
			opacity: 0;
			margin-top: -10px;
			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
			transition: opacity 0.35s, transform 0.35s;
			-webkit-transform: scale3d(0.8,0.8,1);
			transform: scale3d(0.8,0.8,1);
			-webkit-transform-origin: 50% 100%;
			transform-origin: 50% 100%;
			font-size: 2em;
			// @media (max-width: 767px){
			// 	font-size: 80%;
			// }
		}
		&:hover img{
			opacity: 0.04;
			-webkit-transform: scale3d(1.1,1.1,1);
			transform: scale3d(1.1,1.1,1);
		}
		&:hover p, &:hover h2{
			opacity: 1;
			-webkit-transform: scale3d(1,1,1);
			transform: scale3d(1,1,1);
		}
	}
}
// Codrops fixed background prallax scroll 
// code: http://tympanus.net/codrops/2013/05/02/fixed-background-scrolling-layout/
/* Set all parents to full height */ 
.container,
.cbp-fbscroller,
.cbp-fbscroller section { 
	height: 100%; 
}

/* The nav is fixed on the right side  and we center it by translating it 50% 
(we don't know it's height so we can't use the negative margin trick) */
.cbp-fbscroller > nav {
	position: fixed;
	z-index: 9999;
	right: 100px;
	top: 50%;
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
}

.cbp-fbscroller > nav a {
	display: block;
	position: relative;
	color: transparent;
	height: 50px;
}

.cbp-fbscroller > nav a:after {
	content: '';
	position: absolute;
	width: 20px;
	height: 20px;
	border-radius: 50%;
	border: 3px solid #fff;
}

.cbp-fbscroller > nav a:hover:after {
	background: rgba(255,255,255,0.6);
}

.cbp-fbscroller > nav a.cbp-fbcurrent:after {
	background: #fff;
}

/* background-attachment does the trick */
.cbp-fbscroller section {
	position: relative;
	background-position: top center;
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed;
}

#fbsection1 {
	// background-image: url(../img/1.jpg);
	background-image: url("http://placehold.it/2400x1080/b9e0ca/ffffff");
}

#fbsection2 {
	// background-image: url(../img/2.jpg);
	background-image: url("http://placehold.it/2400x1080/f16e48/ffffff");
}

#fbsection3 {
	// background-image: url(../img/3.jpg);
	background-image: url("http://placehold.it/2400x1080/dc686f/ffffff");
}

#fbsection4 {
	// background-image: url(../img/4.jpg);
	background-image: url("http://placehold.it/2400x1080/245772/ffffff");
}

#fbsection5 {
	// background-image: url(../img/5.jpg);
	background-image: url("http://placehold.it/2400x1080/3e788b/ffffff");
}

/////////////////////////////////////////
#cali-map{
	background-color: $teal;
	min-height: 540px;
}
footer {
	background-color: $deepblue;
	color: $midblue;
	padding: 20px 20px 10px 20px;
	p{
		text-align: center;
	}
}

////////////////////////////////////////
// Toggle Nav Left

b {
  position: fixed;
  top: 20px;
  left: 20px;
  z-index: 1;
  width: 36px;
  height: 36px;
  box-sizing: border-box;
  padding: 11px 0 0 9px;
  border-radius: 50%;
  border: 1px solid rgba(0,40,60,.2);
  tap-highlight-color: transparent;
  cursor: pointer;

}
span {
  display: block;
  width: 16px;
  height: 2px;
  background: rgb(0,40,60);
  transition: .7s;
  pointer-events: none;
}
span:nth-child(2) {
  margin: 3px 0;
}
.open {
  border-color: rgba(255,255,255,.2);
}
.open span {
  background: #fff;
}
.open :first-child {
  transform: translateY(5px) rotate(-45deg);
}
.open :nth-child(2) {
  transform: rotate(-45deg);
  opacity: 0;
}
.open :last-child {
  transform: translateY(-5px) rotate(-135deg);
}
.nav-toggle {
  position: fixed;
  width: 83px;
  top: 0;
  bottom: 0;
  left: 0;
  background: rgb(0,40,60);
  transform: translateX(-100%);
  transition: .5s;
}
.open + .nav-toggle {
  transform: none;
}

.hidden {
  width: 80px;
  fill: white;
  border: 1px solid #020202;
}

.menu {
  margin-top: 60px;
  /*background-color: red;*/
  ul {
	  margin: 0;
	  list-style: none;
	  padding: 0;
	}

	li {
	  padding-top: 0;
	  font-size: 20px;
	  color: white; 

	}
	ul li a {
	  display: block;
	  text-decoration: none;
	}

	ul li a:hover {

	color: green;
	background-color: #6b6868;
	}
}

